--- a/index.html
+++ b/index.html
@@ -6,43 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>accounting system</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <nav>
-        <ul class="menu-horizontal">
-            <li><a href="#">inicio</a></li>
-            <li>
-                <a href="#">Almacen</a>
-                <ul class="menu-vertical">
-                    <li><a href="#">Ventanilla</a></li>
-                    <li><a href="#">Bodega</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Servicios</a>
-                <ul class="menu-vertical">
-                    <li><a href="#">Entrada de productos</a></li>
-                    <li><a href="#">Salida de productos</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Inscripcion</a>
-                <ul class="menu-vertical">
-                    <li><a href="#">Mensual</a></li>
-                    <li><a href="#">Trimestral</a></li>
-                    <li><a href="#">Semestral</a></li>
-                    <li><a href="#">Anual</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#">Nosotros</a>
-                <ul class="menu-vertical">
-                    <li><a href="#">Conozcanos</a></li>
-                    <li><a href="#">Contactenos</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
-    
-</body>
+    <img src="imagenes/fondo1.png">
+    <div>
+        <nav>
+            <ul class="menu-horizontal">
+                <li><a href="#">inicio</a></li>
+                <li>
+                    <a href="#">Almacen</a>
+                    <ul class="menu-vertical">
+                        <li><a href="#">Ventanilla</a></li>
+                        <li><a href="#">Bodega</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Servicios</a>
+                    <ul class="menu-vertical">
+                        <li><a href="#">Entrada de <br>  productos</a></li>
+                        <li><a href="#">Salida de <br>  productos</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Inscripcion</a>
+                    <ul class="menu-vertical">
+                        <li><a href="#">Mensual</a></li>
+                        <li><a href="#">Trimestral</a></li>
+                        <li><a href="#">Semestral</a></li>
+                        <li><a href="#">Anual</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Nosotros</a>
+                    <ul class="menu-vertical">
+                        <li><a href="#">Conozcanos</a></li>
+                        <li><a href="#  ">Contactenos</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="banner">
+        <div class="capa"></div>
+
+    </div>
+    <main>
+        <div class="icon" href="login.html">
+            <svg heigth="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            </svg>
+            <i class='bx bxl-instagram'></i>
+        </div>
+
+        <div class="icon">
+            <svg heigth="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            </svg>
+            <i class='bx bxl-facebook-circle'></i>
+        </div>
+
+        <div class="icon">
+            <svg heigth="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            </svg>
+            <i class='bx bxl-whatsapp' ></i>
+        </div>
+
+        <div class="icon">
+            <svg heigth="80" width="80">
+                <circle cx="40" cy="40" r=35 stroke="white" stroke-width="4" fill="none" ></circle>
+            </svg>
+            <i class='bx bxl-gmail' ></i>
+        </div>
+
+    </main>
+    <script src="js7script.js"></script>
 </html>
